--- a/scss/style.scss
+++ b/scss/style.scss
@@ -151,7 +151,7 @@
         right: 0;
         width: 82.5rem;
         height: 69.3rem;
-        background-image: url('../images/icons/rectangle-pink.svg');
+        background-image: url('../images/icons/rectangle-big.svg');
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
@@ -279,7 +279,7 @@
         color: $black;
         text-align: center;
         max-width: rem(505);
-        margin: 0 auto;
+        margin: 0 auto rem(25);
         display: -webkit-box;
         -webkit-line-clamp: 6;
         -webkit-box-orient: vertical;
@@ -344,8 +344,8 @@
     }
 
     &__box {
-        padding-bottom: 25px;
-        padding-top: 25px;
+        padding-bottom: rem(25);
+        padding-top: rem(25);
     }
 
     &__subtitle {
@@ -431,8 +431,8 @@
         font-size: 32px;
         font-weight: 500;
         line-height: 1.4;
-        max-width: 400px;
-        margin: 0 auto 35px;
+        max-width: rem(400);
+        margin: 0 auto rem(35);
     }
 
     &__items {
@@ -541,13 +541,13 @@
     }
 
     &__img {
-        width: 170px;
-        height: 110px;
+        width: rem(170);
+        height: rem(110);
         object-fit: cover;
 
         &--big {
-            width: 463px;
-            height: 425px;
+            width: rem(465);
+            height: rem(425);
             object-fit: cover;
         }
     }
@@ -556,10 +556,10 @@
 .reviews {
     &__title {
         text-align: center;
-        font-size: 32;
+        font-size: 32px;
         font-weight: 500;
         line-height: 1.4;
-        margin-bottom: 40px;
+        margin-bottom: rem(40);
     }
 }
 
@@ -583,8 +583,8 @@
         &::after {
             content: "";
             position: absolute;
-            height: 35px;
-            width: 40px;
+            height: rem(35);
+            width: rem(40);
             background-repeat: no-repeat;
             background-position: center;
             background-size: cover;
@@ -660,16 +660,19 @@
 // конец слайдера
 
 .prints {
-
-
     &__wrapper {
         // clip-path: polygon(0 6%, 100% 0%, 100% 70%, 0% 75%);
         clip-path: polygon(0 6%, 100% 0%, 100% 93%, 0 100%);
         background-color: #2E96FF;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        padding: 100px 65px;
-        gap: 100px;
+        @include adaptiveValue("padding-bottom", 100, 20);
+        @include adaptiveValue("padding-top", 100, 20);
+        @include adaptiveValue("padding-left", 65, 10);
+        @include adaptiveValue("padding-right", 65, 10);
+        // padding: 100px 65px;
+        // gap: 100px;
+        @include adaptiveValue("gap", 100, 20);
         align-items: center;
     }
 
@@ -681,7 +684,7 @@
         font-size: 31px;
         font-weight: 500;
         line-height: 1.3;
-        margin-bottom: 15px;
+        margin-bottom: rem(15);
     }
 
     &__text {
@@ -696,9 +699,9 @@
     display: flex;
 
     &__input {
-        width: 370px;
-        padding: 15px;
-        height: 70px;
+        width: rem(370);
+        padding: rem(15);
+        height: rem(70);
         border-radius: 10px 0 0 10px;
         background-color: $white;
         border: none;
@@ -709,23 +712,27 @@
     }
 
     &__btn {
-        padding: 15px 37px;
+        // padding: 15px 37px;//!!!провереть
+        // padding: 100px;
+        @include adaptiveValue("padding-bottom", 15, 10);
+        @include adaptiveValue("padding-top", 15, 10);
+        @include adaptiveValue("padding-left", 37, 10);
+        @include adaptiveValue("padding-right", 37, 10);
         color: $white;
-        // text-align: center;
         font-size: 18px;
         font-weight: 500;
         line-height: 2.2;
         border-radius: 0 10px 10px 0;
         background-color: $orange;
         border: none;
-        transition: opacity 0.5s;
+        transition: opacity .5s;
 
         &:focus {
             color: $focus;
         }
 
         &:hover {
-            opacity: 0.15;
+            opacity: .8;
         }
 
         &:active {
@@ -734,6 +741,124 @@
     }
 }
 
+.footer {
+    background-color: #140A03;
+    color: $white; //сделать снипед
+    padding: 120px 0px 105px 0px;
+    position: relative;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: -60px;
+        left: 50%;
+        transform: translateX(-50%);
+        height: 60px;
+        width: 730px;
+        background-image: url('../images/icons/rectangle-small.svg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+
+
+    &__wrapper {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        //   display: grid;
+        //  align-items: center;
+        justify-items: center;
+        @include adaptiveValue("gap", 130, 20);
+        height: 250px;
+        // text-align: end;
+        // display: flex;
+        // justify-content: space-between;
+        // align-self: center;
+        // height: 190px;
+    }
+
+    &__items {
+        text-align: end;
+        align-self: end;
+    }
+
+    &__item {
+        align-self: end;
+
+        // gap: 35px;
+        // display: grid;
+        &--logo {
+            align-self: Start;
+        }
+    }
+
+    &__link {
+        display: block;
+        margin-bottom: rem(35); //!!!
+        transition: color 0.5s;
+
+        &--mail {
+            display: inline;
+        }
+
+        &:focus {
+            color: $focus;
+        }
+
+        &:hover {
+            color: $hover;
+        }
+
+        &:active {
+            color: $active;
+        }
+    }
+
+    &__link span {
+        color: $orange;
+    }
+
+    &__img {
+        margin-bottom: rem(65);
+        width: rem(180);
+        height: rem(95);
+    }
+}
+
+
+
+
+.social {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 25px;
+
+    &__item {}
+
+    &__link {
+        background-color: #DFDFDF;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: background-color 0.5s;
+
+        &:focus {
+            color: $focus;
+        }
+
+        &:hover {
+            background-color: $hover;
+        }
+
+        &:active {
+            color: $active;
+        }
+    }
+}
 
 
 
@@ -882,5 +1007,3 @@
 //     // object-position: -23px 57px;
 //     clip-path: url(#mask2);
 // }
-
-@import 'media';
