--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -16,7 +16,7 @@ $btn-menu:silver;
 $default: #000000;
 $orange: #E27B3A;
 
-$padding-main:15rem;
+$padding-main:rem(100);
 // $padding-1200:60px;
 // $padding-992:50px; //70
 // $padding-768:40px; //50
