--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,15 +6,8 @@
 @import 'global';
 @import 'libs';
 
-
-// // снипед
-// width: 0;
-// height: 0;
-// object-fit: cover;
-
-//  border: none;
-//  background-color: transparent;
-
+// исправить все !!!
+// сделать по  2 формуле на 45%
 
 .header {
     padding: rem(30) 0;
@@ -28,35 +21,9 @@
 }
 
 .menu {
-
-    // grid-template-columns: 8% 82% 10%;
-    // grid-template-columns: repeat(3, 1fr);
-    // display: grid;
-    // justify-items: center;
-    // align-items: center;
     display: flex;
     justify-content: space-between;
-    // grid-gap: rem(35);
     @include adaptiveValue("grid-gap", 35, 20);
-    // justify-content: space-between;
-    // justify-items: stretch;
-
-    // .menu__inner {
-    //     margin: 0 auto;
-    // }
-
-    // .menu__btn {
-    //     order1
-    // }
-
-    // &__items {}
-
-    // &__item {}/
-
-    // &__nav {
-    //     margin-left: auto;
-    //     /*написано 2 раза и в стилях и тут items*/
-    // }
 
     &__logo {
         line-height: 0;
@@ -64,17 +31,14 @@
 
     &__btn {
         display: none;
-        // position: relative;
 
         @media (max-width: 992px) {
             order: 1;
             border: none;
-            // margin-left: rem(40);
             width: 23px;
             height: 16px;
             position: relative;
-            display: flex; //!!!
-            justify-content: space-between;
+            display: grid;
             align-items: center;
             background-color: transparent;
             padding: 0;
@@ -91,9 +55,7 @@
 
             &.active::after {
                 transform: rotate(-45deg);
-                // bottom: rem(9);
                 bottom: 4px;
-                // bottom: rem(2);
             }
 
             span,
@@ -128,11 +90,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        // width: 100%;
         @include adaptiveValue("gap", 55, 20);
-
-        // display: grid;
-        // grid-template-columns: repeat(4, 1fr);
         @media (max-width: 992px) {
             transform: translateY(-200%);
             position: absolute;
@@ -176,21 +134,17 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         @include adaptiveValue("gap", 40, 20);
+
+        @media (max-width: 992px) {
+            grid-template-columns: repeat(3, 1fr);
+            align-items: center;
+        }
     }
 }
 
-// --------------------!!!!
-.containers {
-    width: 500px;
-    height: 500px;
-    display: grid;
-    grid-template-rows: repeat(auto-fit, minmax(0, 1fr));
-}
-
-// ------------------------
 .intro {
     position: relative;
-    display: flex;
+    display: grid;
     align-items: center;
 
     &::before {
@@ -209,44 +163,20 @@
 
     &__wrapper {
         height: 100vh;
-        // display: flex; //!!!
-        // align-items: center;
-        // justify-items: center;
-        // ----------2
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         align-items: center;
-        // ----------2
 
         @media (max-width: 1200px) {
-            // flex-direction: column-reverse;
-            // justify-content: center;
-            // ----------2
             grid-template-columns: inherit;
-            // grid-template-columns: repeat(3, 1fr);
-            // align-items: center;
-            // justify-content: center;
             place-content: center;
-            // align-content: center;
-
-            // --
-            // grid-template-rows: repeat(auto-fit, minmax(36rem, 1fr));
-                    // grid-template-rows: repeat(auto-fit, minmax(0, 1fr));
-                    // align-items: center;
-            // -----------2
-            // grid-auto-flow: dense;
-            // grid-template-areas: "intro__img intro__box";
-            // grid-template-areas: "b t";
         }
     }
 
     &__box {
         @media (max-width: 1200px) {
             max-width: 100%;
-            // margin: 0 auto;
-            // ----2
             grid-row-start: 2;
-            // ----
         }
     }
 
@@ -269,7 +199,6 @@
 
         @media (max-width: 1200px) {
             margin: 0 auto;
-            // grid-row-start: 1;
         }
     }
 }
@@ -305,8 +234,7 @@
         clip-path: url(#mask4);
         width: rem(63);
         height: rem(54);
-        display: flex;
-        justify-content: center;
+        display: grid;
         align-items: center;
 
         @media (max-width: 1200px) {
@@ -441,9 +369,9 @@
 
         // grid-template-columns: repeat(auto-fit, minmax(5rem, 1fr)); //555
 
-        @media (max-width: 1200px) {
-            // grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
-        }
+        // @media (max-width: 1200px) {
+        //     // grid-template-columns: repeat(auto-fit, minmax(9rem, 1fr));
+        // }
 
         @media (max-width: 992px) {
             // grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
@@ -638,7 +566,7 @@
 
     // возможно сделать отдельный бем блок!!!
     &__btn {
-        display: flex;
+        display: grid;
         margin: 0 auto;
         background-color: $orange;
         border: none;
@@ -670,9 +598,9 @@
         @include adaptiveValue("gap", 30, 20);
         grid-template-columns: repeat(2, 1fr);
 
-        @media (max-width: 576px) {
-            // display: block;
-        }
+        // @media (max-width: 576px) {
+        //     // display: block;
+        // }
     }
 
     &__title {
@@ -816,10 +744,6 @@
         max-width: rem(495);
     }
 
-    &__star {
-        // проверить стили!!!
-    }
-
     &__subtitle {
         color: $black;
     }
@@ -901,7 +825,7 @@
 }
 
 .form {
-    display: flex;
+    display: flex; //просто для двух калонок
 
     &__input {
         width: rem(370);
@@ -921,12 +845,7 @@
     }
 
     &__btn {
-        // padding: 15px 37px;//!!!провереть
-        // padding: 100px;
-        @include adaptiveValue("padding-bottom", 15, 10);
-        @include adaptiveValue("padding-top", 15, 10);
-        @include adaptiveValue("padding-left", 37, 10);
-        @include adaptiveValue("padding-right", 37, 10);
+        padding: 1.5rem 3.7rem; //решл в rem
         color: $white;
         font-size: rem(18);
         font-weight: 500;
@@ -952,11 +871,12 @@
 
 .footer {
     background-color: #140A03;
-    color: $white; //сделать снипед
+    color: $white; 
     padding-bottom: rem(105);
     padding-top: rem(120);
     position: relative;
-
+  
+  
     &::before {
         content: "";
         position: absolute;
@@ -987,13 +907,14 @@
         height: rem(280);
 
         @media (max-width: 576px) {
-            gap: rem(20);
+            gap: rem(40);
         }
     }
 
     &__items {
         text-align: end;
         align-self: center;
+
     }
 
     &__item {
@@ -1048,10 +969,8 @@
         border-radius: 50%;
         width: rem(40);
         height: rem(40);
-        display: block;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        display: grid;
+        place-content: center;
         transition: background-color 0.5s;
 
         &:focus {
@@ -1067,11 +986,3 @@
         }
     }
 }
-
-// font-size: clamp(26px, 50% 32px);
-// font-size: min(26px, max(32px));
-// font-size: calc(32px + (16px * (100vw - 768px) / (100vw - 1280px)));
-// font-size: calc(32px - 6px * (100vw / 1280));
-// font-size: clamp(26px, 8vw, 32px);
-// font-size: clamp(26px, 1.5vw, 32px); //лутший вариант
-// @include adaptiveValue("font-size", 32, 26);
