--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,14 @@
 // исправить все !!!
 // сделать по  2 формуле на 45%
 
+// провисать ограничение текста не обязательно
+
+// reviews проблема с иконками на 320!!!
+// наверное только делать по 2 формуле на 45% отсталось если не делать все идеально
+
+
+
+
 .header {
     padding: rem(30) 0;
     position: fixed;
@@ -18,6 +26,14 @@
     z-index: 100;
     background-color: transparent;
     align-items: center;
+}
+
+.header-fixed {
+    background-color: silver;
+}
+
+.link-active {
+    color: #2E96FF;
 }
 
 .menu {
@@ -79,7 +95,6 @@
         }
     }
 
-
     &__logo {
         width: 85px;
         height: 40px;
@@ -91,6 +106,7 @@
         justify-content: space-between;
         align-items: center;
         @include adaptiveValue("gap", 55, 20);
+
         @media (max-width: 992px) {
             transform: translateY(-200%);
             position: absolute;
@@ -113,6 +129,10 @@
         text-align: center;
         transition: color 0.5s;
 
+        @media (max-width: 992px) {
+            width: 100%;
+        }
+
         &:focus {
             color: $focus;
         }
@@ -128,6 +148,14 @@
 
     &__link {
         display: block;
+
+        // &active {
+        //     color: red;
+        // }
+
+        // &--active {
+        //     color: red;
+        // }
     }
 
     &__nav {
@@ -139,6 +167,11 @@
             grid-template-columns: repeat(3, 1fr);
             align-items: center;
         }
+    }
+
+    &__button {
+        border: none;
+        background-color: transparent;
     }
 }
 
@@ -203,7 +236,6 @@
     }
 }
 
-//скорей всего придется делать 2 разных блока!!!
 .quality {
     &__items {
         display: grid;
@@ -220,10 +252,7 @@
         border-radius: 8px;
         background-color: $white;
         position: relative;
-
-        &--bowl {
-            border: 1px solid rgba(0, 0, 0, 0.10);
-        }
+        border: 1px solid rgba(0, 0, 0, 0.10);
     }
 
     &__images {
@@ -235,6 +264,7 @@
         width: rem(63);
         height: rem(54);
         display: grid;
+        justify-content: center; //возможно по другому через абсолют
         align-items: center;
 
         @media (max-width: 1200px) {
@@ -258,33 +288,6 @@
         width: rem(35);
         height: rem(35);
         object-fit: cover;
-
-        &--dog1,
-        &--dog2,
-        &--dog3 {
-            clip-path: url(#mask3);
-            object-fit: cover;
-
-            @media (max-width: 1200px) {
-                clip-path: inherit;
-            }
-        }
-
-        &--dog3,
-        &--dog2,
-        &--dog1 {
-            width: rem(315);
-            height: rem(270);
-        }
-
-        &--dog2,
-        &--dog3 {
-            object-position: right;
-        }
-
-        &--dog1 {
-            object-position: left;
-        }
     }
 
     &__subtitle {
@@ -306,8 +309,9 @@
     }
 
     &__link {
-
         transition: color 0.5s;
+        display: block;
+        padding: 40px 25px;
 
         &:focus {
             color: $focus;
@@ -321,11 +325,6 @@
 
         &:active {
             color: $active;
-        }
-
-        &--bowl {
-            display: block;
-            padding: 40px 25px;
         }
     }
 }
@@ -452,10 +451,13 @@
         font-weight: 500;
     }
 
-    &__link-all {
-        color: $orange;
+    &__wrap {
         text-align: center;
-        display: block;
+    }
+
+    &__view {
+        color: $orange;
+        display: inline-block;
         transition: color 0.5s;
 
         &:focus {
@@ -554,17 +556,85 @@
 
     &__items {
         @include adaptiveValue("margin-bottom", 50, 20);
-        // justify-items: center;
-        // //  @include adaptiveValue("row-gap", 65, 20);
-        // @include adaptiveValue("grid-column-gap", 30, 20);
-        // //  margin-bottom: rem(65);
-        // grid-template-columns: repeat(4, 1fr);
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(36rem, 1fr));
         gap: 30px;
+
+        // @media (max-width: 768px) {
+        //     gap: 40px;
+        //     // проверить нужен ли тут
+        // }
     }
 
-    // возможно сделать отдельный бем блок!!!
+    &__item {
+        text-align: center;
+        border-radius: 8px;
+        background-color: $white;
+        position: relative;
+    }
+
+    &__link {
+        transition: color 0.5s;
+        display: block;
+
+        &:focus {
+            color: $focus;
+        }
+
+        &:hover {
+            .subscription__subtext {
+                color: $hover;
+            }
+        }
+
+        &:active {
+            color: $active;
+        }
+
+        // &--bowl {
+        //     display: block;
+        //     padding: 40px 25px;
+        // }
+    }
+
+    &__img {
+        width: rem(315);
+        height: rem(270);
+        clip-path: url(#mask3);
+        object-fit: cover;
+
+        @media (max-width: 1200px) {
+            clip-path: inherit;
+        }
+
+        &--dog2,
+        &--dog3 {
+            object-position: right;
+        }
+
+        &--dog1 {
+            object-position: left;
+        }
+    }
+
+    &__subtitle {
+        color: $black;
+        font-family: Poppins;
+        font-size: rem(25);
+        max-width: rem(270);
+        margin: 0 auto rem(10);
+    }
+
+    &__text {
+        color: $black;
+        max-width: rem(250);
+        margin: 0 auto rem(25);
+    }
+
+    &__subtext {
+        color: $orange;
+    }
+
     &__btn {
         display: grid;
         margin: 0 auto;
@@ -624,15 +694,10 @@
     }
 
     &__item {
-        padding-bottom: rem(35);
-        padding-top: rem(35);
-        padding-left: rem(25);
-        padding-right: rem(25);
-        text-align: center;
         border-radius: 5px;
         transition: opacity .5s;
         display: grid;
-        align-items: center;
+
         cursor: pointer;
 
         &:focus {
@@ -666,6 +731,15 @@
         &--5 {
             background-color: rgb(77%, 8%, 29%, 0.1);
         }
+    }
+
+    &__link {
+        display: grid;
+        place-content: center;
+        padding-bottom: rem(35);
+        padding-top: rem(35);
+        padding-left: rem(25);
+        padding-right: rem(25);
     }
 
     &__img {
@@ -769,6 +843,7 @@
     position: absolute;
     bottom: 25%;
     right: -10%;
+    line-height: 0;
 }
 
 .slick-next {
@@ -871,12 +946,12 @@
 
 .footer {
     background-color: #140A03;
-    color: $white; 
+    color: $white;
     padding-bottom: rem(105);
     padding-top: rem(120);
     position: relative;
-  
-  
+
+
     &::before {
         content: "";
         position: absolute;
