--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,6 +17,8 @@
 //прописать картинкам и возсможно кнопкам lh0!!!
 
 // наверное надо удалить весь адаптив и сделать заного и тогда и 45% тоже
+// доделать версию и исправить мал проблемы
+// протестить резиновою верстку на контент кортинок растягивается или нет
 
 
 .header {
@@ -153,14 +155,17 @@
     }
 
     &__nav {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        // display: grid;
+        // grid-template-columns: repeat(2, 1fr);
         @include adaptiveValue("gap", 40, 20);
 
-        @media (max-width: 992px) {
-            grid-template-columns: repeat(3, 1fr);
-            align-items: center;
-        }
+        // @media (max-width: 992px) {
+        //     grid-template-columns: repeat(3, 1fr);
+        //     align-items: center;
+        // }
     }
 
     &__button {
@@ -189,7 +194,7 @@
 
 .intro {
     position: relative;
-    display: grid;
+    display: flex;
     align-items: center;
 
     &::before {
@@ -208,13 +213,18 @@
 
     &__wrapper {
         height: 100vh;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        display: flex;
         align-items: center;
+        justify-content: center;
+        // ------------
+        // display: grid;
+        // grid-template-columns: repeat(2, 1fr);
+
 
         @media (max-width: 992px) {
-            grid-template-columns: inherit;
-            place-content: center;
+            // grid-template-columns: inherit;
+            // place-content: center;
+            flex-direction: column-reverse;
         }
     }
 
@@ -254,8 +264,11 @@
 
 .quality {
     &__items {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(36rem, 1fr));
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        // display: grid;
+        // grid-template-columns: repeat(auto-fit, minmax(36rem, 1fr));
         gap: 30px; //нужен
     }
 
@@ -275,7 +288,9 @@
         clip-path: url(#mask4);
         width: 63px;
         height: 54px;
-        display: grid;
+
+        // display: grid;
+        display: flex;
         justify-content: center; //возможно по другому через абсолют
         align-items: center;
 
@@ -369,17 +384,21 @@
         }
     }
 
-
     &__wrapper {
-        display: grid;
+        // display: grid;
+        // grid-template-columns: repeat(12, 1fr);
+        // остоновился тут
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+
         @include adaptiveValue("row-gap", 65, 20);
         @include adaptiveValue("grid-column-gap", 30, 20);
         margin-bottom: rem(65);
-        grid-template-columns: repeat(12, 1fr);
 
-        @media (max-width: 576px) {
-            grid-template-columns: repeat(auto-fit, minmax(3rem, 1fr));
-        }
+        // @media (max-width: 576px) {
+        //     grid-template-columns: repeat(auto-fit, minmax(3rem, 1fr));
+        // }
     }
 
     &__article {
@@ -394,6 +413,10 @@
 
         &--big {
             grid-column-end: span 6;
+        }
+
+        &--small {
+            max-width: 360px; //удалить лишний модификатор в других версиях!!!
         }
 
         &:focus {
@@ -471,14 +494,22 @@
 
 .adoption {
     &__wrapper {
-        display: grid;
-        grid-template-columns: repeat(2, 60% 40%);
+        display: flex;
         align-items: center;
-        justify-items: center;
+        flex-wrap: wrap;
+        // justify-content: center;
+        // -----------------
+        // display: grid;
+        // grid-template-columns: repeat(2, 60% 40%);
+        // align-items: center;
+        // justify-items: center;
         gap: 20px; //иожет быть скролл
 
-        @media (max-width: 1200px) {
-            grid-template-columns: repeat(2, 48% 48%);
+        // @media (max-width: 1200px) {
+        //     grid-template-columns: repeat(2, 48% 48%);
+        // }
+        @media (max-width: 992px) {
+            // justify-content: center;
         }
 
         @media (max-width: 768px) {
@@ -497,12 +528,19 @@
         @media (max-width: 1200px) {
             clip-path: none;
             object-position: -110px 0;
-            width: 67rem;//для клип патх
+            width: 67rem; //для клип патх
             height: 63rem;
+        }
+
+        @media (max-width: 992px) {
+            width: 40%;
         }
 
         @media (max-width: 768px) {
             margin-bottom: 20px;
+            width: 100%;
+            // object-position: -120px 0px;
+            // object-fit: none;
         }
     }
 
@@ -510,8 +548,14 @@
         max-width: rem(485);
         margin-left: auto;
 
+        @media (max-width: 992px) {
+            width: 60%;
+        }
+
         @media (max-width: 768px) {
             margin: 0 auto;
+            width: 100%;
+            max-width: 100%;
         }
     }
 
@@ -553,8 +597,11 @@
 
     &__items {
         @include adaptiveValue("margin-bottom", 50, 20);
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(36rem, 1fr));
+        // display: grid;
+        // grid-template-columns: repeat(auto-fit, minmax(36rem, 1fr));
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
         gap: 30px;
     }
 
@@ -651,9 +698,21 @@
 
 .gallery {
     &__wrapper {
-        display: grid;
+        // display: grid;
+        // grid-template-columns: repeat(auto-fit, minmax(33rem, 1fr));
+        display: flex;
+        justify-content: center;
+        grid-auto-flow: wrap;
         @include adaptiveValue("gap", 30, 20);
-        grid-template-columns: repeat(auto-fit, minmax(33rem, 1fr));
+    }
+
+    &__left {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: end;
+        // скорей всего удалить весь лефт с ксс
+        // остановился
     }
 
     &__title {
@@ -671,16 +730,20 @@
     }
 
     &__content {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        max-width: rem(470);
+        // display: grid;
+        // grid-template-columns: repeat(2, 1fr);
         @include adaptiveValue("gap", 30, 20);
     }
 
     &__item {
         border-radius: 5px;
         transition: opacity .5s;
-        display: grid;
-
+        display: flex;
+        // display: grid;
         cursor: pointer;
 
         &:focus {
@@ -697,22 +760,27 @@
 
         &--1 {
             background-color: rgb(56%, 4%, 3%, 0.1);
+            max-width: rem(260);
         }
 
         &--2 {
             background-color: rgb(14%, 24%, 49%, 0.1);
+            max-width: rem(260);
         }
 
         &--3 {
             background-color: rgb(50%, 0%, 15%, 0.1);
+            max-width: rem(260);
         }
 
         &--4 {
             background-color: rgb(77%, 55%, 68%, 0.1);
+            max-width: rem(260);
         }
 
         &--5 {
             background-color: rgb(77%, 8%, 29%, 0.1);
+            max-width: rem(555);
         }
     }
 
@@ -737,6 +805,12 @@
         &--big {
             width: rem(465);
             height: rem(425);
+            // max-width: 555px;
+        }
+        &--small {
+            // width: rem(465);
+            // height: rem(425);
+            // max-width: 260px;
         }
     }
 }
