--- a/scss/style.scss
+++ b/scss/style.scss
@@ -416,7 +416,7 @@
         }
 
         &--small {
-            max-width: 360px; //удалить лишний модификатор в других версиях!!!
+            max-width: 360px; //удалить лишний модификатор в других версиях!!
         }
 
         &:focus {
@@ -545,7 +545,8 @@
     }
 
     &__box {
-        max-width: rem(485);
+        // max-width: rem(485);
+        max-width: rem(445);
         margin-left: auto;
 
         @media (max-width: 992px) {
@@ -697,22 +698,38 @@
 }
 
 .gallery {
+
+    // в этом блоке можно убрать часть кода для других версий и именно много было flex
     &__wrapper {
         // display: grid;
         // grid-template-columns: repeat(auto-fit, minmax(33rem, 1fr));
         display: flex;
         justify-content: center;
-        grid-auto-flow: wrap;
+        // flex-wrap: wrap;
+        // grid-auto-flow: wrap;
         @include adaptiveValue("gap", 30, 20);
+
+        @media (max-width: 992px) {
+            // display: block;
+            flex-wrap: wrap;
+        }
     }
 
     &__left {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: end;
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: end;
+        // align-items:end;
+        // max-width: 50%;
+        max-width: rem(555);
+
+        // align-items: end;
         // скорей всего удалить весь лефт с ксс
         // остановился
+        @media (max-width: 576px) {
+            width: 100%;
+            max-width: 100%;
+        }
     }
 
     &__title {
@@ -726,14 +743,17 @@
     &__text {
         color: $black;
         text-align: center;
-        margin-bottom: rem(25);
+        margin-bottom: rem(45);
+        // max-width: rem(555);
     }
 
     &__content {
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
-        max-width: rem(470);
+        justify-content: space-between;
+        // justify-content: start;
+
+        // max-width: rem(470);
         // display: grid;
         // grid-template-columns: repeat(2, 1fr);
         @include adaptiveValue("gap", 30, 20);
@@ -742,9 +762,14 @@
     &__item {
         border-radius: 5px;
         transition: opacity .5s;
-        display: flex;
+        // display: flex;
         // display: grid;
         cursor: pointer;
+
+        @media (max-width: 576px) {
+            width: 100%;
+            // max-width: 100%;
+        }
 
         &:focus {
             color: $focus;
@@ -760,53 +785,80 @@
 
         &--1 {
             background-color: rgb(56%, 4%, 3%, 0.1);
-            max-width: rem(260);
+            // max-width: rem(260);
         }
 
         &--2 {
             background-color: rgb(14%, 24%, 49%, 0.1);
-            max-width: rem(260);
+            // max-width: rem(260);
         }
 
         &--3 {
             background-color: rgb(50%, 0%, 15%, 0.1);
-            max-width: rem(260);
+            // max-width: rem(260);
         }
 
         &--4 {
             background-color: rgb(77%, 55%, 68%, 0.1);
-            max-width: rem(260);
+            // max-width: rem(260);
         }
 
         &--5 {
             background-color: rgb(77%, 8%, 29%, 0.1);
-            max-width: rem(555);
+            // max-width: rem(555);
+            // max-width: 50%;
         }
     }
 
     &__link {
-        display: grid;
-        place-content: center;
-        padding-bottom: rem(35);
-        padding-top: rem(35);
+        // display: grid;
+        // place-content: center;
+        display: flex;
+        // justify-content: center;
+        // align-items: center;
+        padding-bottom: rem(30);
+        padding-top: rem(30);
         padding-left: rem(25);
         padding-right: rem(25);
+
+        // padding-bottom: rem(35);
+        // padding-top: rem(35);
+        @media (max-width: 576px) {
+            // margin: 0 auto;
+            justify-content: center;
+        }
+
+        &--5 {
+            padding-bottom: rem(45);
+            padding-top: rem(40);
+            padding-left: rem(45);
+            padding-right: rem(45);
+            // padding-bottom: rem(35);
+            // padding-top: rem(35);
+        }
     }
 
     &__img {
-        width: rem(170);
+        // width: rem(170);
+        width: rem(210);
         height: rem(110);
-        object-fit: cover;
+        // object-fit: cover;
+        object-fit: contain;
 
-        @media (max-width: 768px) {
-            object-fit: contain;
-        }
+        // @media (max-width: 768px) {
+        //     object-fit: contain;
+        // }
 
         &--big {
             width: rem(465);
+
+            // width: rem(785);
+
+            // height: rem(405);
             height: rem(425);
             // max-width: 555px;
         }
+
         &--small {
             // width: rem(465);
             // height: rem(425);
@@ -936,19 +988,32 @@
     &__wrapper {
         clip-path: polygon(0 6%, 100% 0%, 100% 93%, 0 100%);
         background-color: #2E96FF;
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-
+        // display: grid;
+        // grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        // flex-wrap: wrap;
         @include adaptiveValue("padding-bottom", 100, 20);
         @include adaptiveValue("padding-top", 100, 20);
         @include adaptiveValue("padding-left", 65, 20);
         @include adaptiveValue("padding-right", 65, 20);
         @include adaptiveValue("gap", 100, 10);
-        align-items: center;
 
-        // @media (max-width: 576px) {
-        //     display: block;
-        // }
+
+        @media (max-width: 768px) {
+            display: block;
+            // лутьше грид
+        }
+    }
+
+    &__item {
+        width: 50%;
+
+        @media (max-width: 768px) {
+            width: 100%;
+            margin-bottom: 20px;
+        }
     }
 
     &__title {
@@ -1044,14 +1109,25 @@
     }
 
     &__wrapper {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
-        justify-items: center;
-        @include adaptiveValue("gap", 130, 20);
+        // display: grid;
+        // grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+        display: flex;
+        // justify-content: space-between;
+        flex-wrap: wrap;
+        // justify-items: center;
+        // @include adaptiveValue("gap", 130, 20);
+        gap: rem(220);
+        // 193
         height: rem(280);
+        // придумать по возможности что бы средний блок был всегда по середи не !!!
+        // и высоту футера по пп!!!
 
         @media (max-width: 768px) {
             height: 100%;
+        }
+
+        @media (max-width: 768px) {
+            justify-content: center;
         }
 
         // @media (max-width: 576px) {
@@ -1060,22 +1136,42 @@
     }
 
     &__items {
-        text-align: end;
         align-self: center;
+
+        @media (max-width: 1200px) {
+            text-align: end; //проверить куда оно надо
+        }
 
         @media (max-width: 576px) {
             width: 100%;
             text-align: center;
+        }
+
+        &--care {
+            text-align: right; //не было
+
+            @media (max-width: 768px) {
+                order: -1;
+                text-align: left;
+            }
+
+
+        }
+    }
+
+    &__box {
+        align-self: Start;
+        max-width: rem(180); //возможно в др сборках надо
+
+        // margin-right: rem(140);
+        @media (max-width: 576px) {
+            order: -1;
         }
     }
 
     &__item {
         &:not(:last-child) {
             margin-bottom: rem(35);
-        }
-
-        &--logo {
-            align-self: Start;
         }
     }
 
@@ -1086,7 +1182,7 @@
 
     &__link {
         display: inline;
-        transition: color 0.5s;
+        transition: color .5s;
 
         &:focus {
             color: $focus;
@@ -1099,11 +1195,16 @@
         &:active {
             color: $active;
         }
+
+        &--mail {
+            color: $orange;
+        }
     }
 
-    &__link span {
-        color: $orange;
-    }
+    // &__link span {
+    //     color: $orange;
+    //     // не было спана ошибка в этой версии
+    // }
 
     &__img {
         width: rem(180);
@@ -1112,8 +1213,10 @@
 }
 
 .social {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    // display: grid;
+    // grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    justify-content: space-between;
     gap: rem(25);
 
     &__link {
